<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/toolbar"
        android:id="@+id/input_nama"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionGo"
            android:hint="@string/masukkan_nama_anda"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_minuman"
        android:layout_below="@+id/input_nama"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBoxteh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:text="@string/teh_manis" />

    <CheckBox
        android:id="@+id/checkBoxkopi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/checkBoxteh"
        android:layout_marginTop="10dp"
        android:text="@string/kopi_pahit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:layout_below="@+id/checkBoxkopi"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/textViewjumlah" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/textViewjumlah">

        <Button
            android:id="@+id/buttonkurang"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/min" />

        <TextView
            android:id="@+id/jumlahtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nol"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/buttontambah"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_harga"
        android:layout_below="@+id/linear"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/texttotal" />

    <TextView
        android:id="@+id/print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texttotal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/buttonorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/order"/>

</RelativeLayout>