<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.esy.android_inyourhand.myapplication.fragment.CourtCounterFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/scorea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/pointa3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/_3_points"
                android:backgroundTint="@color/colorPrimary"/>

            <Button
                android:id="@+id/pointa2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/_2_points"
                android:backgroundTint="@color/colorPrimary"/>
            <Button
                android:id="@+id/freethrowa"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/free_throw"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <View
            android:layout_marginTop="15dp"
            android:layout_width="1dp"
            android:layout_height="300dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/scoreb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/pointb3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/_3_points"
                android:backgroundTint="@color/colorPrimary"/>

            <Button
                android:id="@+id/pointb2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/_2_points"
                android:backgroundTint="@color/colorPrimary"/>

            <Button
                android:id="@+id/freethrowb"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/free_throw"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/reset"/>

</RelativeLayout>
